# ai-qa-copilot

./: .env.example  .gitignore  README.md  pyproject.toml
agents/automation_agent/: agent.py  config.yaml  schemas.py
agents/automation_agent/prompts/: v1.md
agents/base/: agent_interface.py  base_agent.py  registry.py  schemas.py
agents/test_case_generator/: agent.py  config.yaml  schemas.py
agents/test_case_generator/prompts/: requirements_v1.md  requirements_v2.md  v1.md  v2.md  v3.md  v4.md  v5.md  v6.md  v7.md
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: events.py  workflows.py
backend/app/core/: container.py  settings.py
backend/app/domain/: revision_history.py  traceability.py  workflow_run.py
backend/app/orchestrator/: engine.py  workflow_config.py
backend/app/repositories/: interfaces.py  sqlite_repository.py
configuration/: agents.yaml  models.yaml  workflow.yaml
configuration/environments/: local.yaml
docs/architecture/: design.md
docs/samples/: sample-prd-login.md  sample-prd-saucedemo.md
events/: event_bus.py
llm/: pricing.py  provider.py  router.py
llm/providers/: claude_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py
playwright/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
playwright/pages/: LoginPage.ts  ProductsPage.ts
playwright/tests/: login.spec.ts  products.spec.ts
services/: artifact_manager.py  file_service.py  git_service.py  interfaces.py
