[project]
name = "ai-qa-copilot"
version = "0.1.0"
description = "Autonomous AI QA Copilot -- test case generation, Playwright automation, and code review agents orchestrated over a local LLM."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "agents", "services", "llm", "events", "knowledge", "guardrails", "evaluation"]
